# learn-wgpu-rs

./: Cargo.toml  build.rs  index.html
assets/: star.xlsx
src/: controller.rs  init.rs  initialize.rs  lib.rs  meshes.rs  models.rs  resources.rs  shader.wgsl  shader_challenge.wgsl  state.rs
src/models/: camera.rs  configuration.rs  controller.rs  draw.rs  geometry.rs  instance.rs  light.rs  mod.rs  model.rs  texture.rs  uniform.rs  vertex.rs
src/models/camera/: controller.rs  mod.rs  projection.rs  uniform.rs
src/models/draw/: light.rs  mod.rs  model.rs
src/models/texture/: mod.rs  texture_static.rs
src/shaders/: light.wgsl  shader.wgsl
src/state/: initialize.rs  mod.rs  render.rs  state_impl.rs  state_static.rs
