[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"
description = "Working through the excellent 'Learn wgpu' tutorial series. https://sotrh.github.io/learn-wgpu/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nejat/learn-wgpu-rs"
keywords = ["wgpu"]
categories = ["graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
cfg-if = "1"
cgmath = "0.18"
pollster = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
wgpu = "0.14"
winit = "0.27"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wgpu = { version = "0.14", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }