[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"
description = "Working through the excellent 'Learn wgpu' tutorial series. https://sotrh.github.io/learn-wgpu/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nejat/learn-wgpu-rs"
keywords = ["wgpu"]
categories = ["graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
cfg-if = "1"
cgmath = "0.18"
instant = "0.1"
tobj = { version = "3", features = ["async"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
winit = "0.27"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.14"
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
reqwest = { version = "0.11" }
tracing-wasm = "0.2"
wgpu = { version = "0.14", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "Location", "Window"] }

[build-dependencies]
anyhow = "1"
fs_extra = "1"
glob = "0.3"

